# SPM-SLAM-Android

./: README.md
Test/: build.gradle  command.md  gradle.properties  settings.gradle
Test/app/: build.gradle
Test/app/src/main/: AndroidManifest.xml
Test/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Test/app/src/main/cpp/include/librealsense2/: rs.h
Test/app/src/main/cpp/src/: CMakeLists.txt  imageparams.h  map.cpp  mapmanager.cpp  slam.cpp  slam.h  ucoslam.cpp  ucoslam.h  utils.h
Test/app/src/main/cpp/src/basic_types/: frame.h
Test/app/src/main/cpp/src/optimization/: globaloptimizer.cpp  ucosba.cpp  ucosba.h
Test/app/src/main/cpp/src/stuff/: ferns.cpp  ferns.h  frameextractor.cpp  frameextractor.h  mapinitializer.cpp  timers.h
Test/app/src/main/cpp/src/viewers/: sgl.h  slam_sglcvviewer.h
Test/app/src/main/cpp/utility/: CMakeLists.txt  log_cout.h  log_util.cpp  log_util.h  mystring.h  timer.cpp  timer.h  utility.h
Test/app/src/main/cpp/utility/draw_result/: delaunay.cpp  draw_result.cpp  draw_result.hpp
Test/app/src/main/cpp/utility/example/: stereo_inertial.cpp  stereo_inertial.h
Test/app/src/main/java/com/example/test/: D435iView.java  HomeActivity.java  MainActivity.java
Test/app/src/main/res/layout/: activity_main.xml
Test/app/src/main/res/values/: colors.xml
Test/gradle/wrapper/: gradle-wrapper.properties
